--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/my-react-page/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
